[gd_scene load_steps=44 format=3 uid="uid://bkwei0x6a2bsq"]

[ext_resource type="Script" path="res://scenes/Monsters/shooting_aberration1.gd" id="1_ynahl"]
[ext_resource type="Shader" path="res://graphic/shaders/aberration1.gdshader" id="2_5s5y3"]
[ext_resource type="Texture2D" uid="uid://cc8gvnn0ds0wf" path="res://graphic/Monsters/CursedWorker/aberration human - death-Sheet.png" id="3_ag4i8"]
[ext_resource type="Texture2D" uid="uid://dqhcr3klc6e5x" path="res://graphic/Monsters/CursedWorker/aberration human - idle-Sheet-Sheet.png" id="4_6d2i5"]
[ext_resource type="Texture2D" uid="uid://36phuftvnwlb" path="res://graphic/Monsters/CursedWorker/aberration human - run-Sheet.png" id="5_mrqwm"]
[ext_resource type="Texture2D" uid="uid://rlomjuhcl64t" path="res://graphic/Monsters/CursedWorker/aberration human - shoot-Sheet.png" id="6_ijs0q"]
[ext_resource type="AudioStream" uid="uid://bf2mf7v3l6aev" path="res://Audio/SFX/monsters/EnemyHit1.wav" id="7_bho48"]
[ext_resource type="AudioStream" uid="uid://cdybpqppvvfrj" path="res://Audio/SFX/monsters/EnemyDied1.wav" id="8_snvkn"]
[ext_resource type="AudioStream" uid="uid://daasw1p8vfcfm" path="res://Audio/SFX/monsters/EnemyGoingToShoot2.wav" id="9_d5kft"]
[ext_resource type="AudioStream" uid="uid://dv5jiixucrp6t" path="res://Audio/SFX/27_sword_miss_1.wav" id="10_y6of6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cjyqf"]
shader = ExtResource("2_5s5y3")
shader_parameter/range = 0.015
shader_parameter/noiseQuality = 136.0
shader_parameter/noiseIntensity = 0.001
shader_parameter/offsetIntensity = 0.01
shader_parameter/colorOffsetIntensity = 0.514
shader_parameter/modulate = Color(0.517647, 0, 0.337255, 1)
shader_parameter/modulate_strength = 0.09

[sub_resource type="AtlasTexture" id="AtlasTexture_xcxd8"]
atlas = ExtResource("3_ag4i8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3fln"]
atlas = ExtResource("3_ag4i8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1vhp"]
atlas = ExtResource("3_ag4i8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr70s"]
atlas = ExtResource("3_ag4i8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbk57"]
atlas = ExtResource("3_ag4i8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8so8s"]
atlas = ExtResource("3_ag4i8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlbwf"]
atlas = ExtResource("3_ag4i8")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy3vu"]
atlas = ExtResource("3_ag4i8")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ilc"]
atlas = ExtResource("3_ag4i8")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jshf"]
atlas = ExtResource("4_6d2i5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t755y"]
atlas = ExtResource("4_6d2i5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58yrh"]
atlas = ExtResource("4_6d2i5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ami"]
atlas = ExtResource("4_6d2i5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn1xp"]
atlas = ExtResource("5_mrqwm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sd6o"]
atlas = ExtResource("5_mrqwm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7axia"]
atlas = ExtResource("5_mrqwm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4b3t"]
atlas = ExtResource("5_mrqwm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6xq8"]
atlas = ExtResource("6_ijs0q")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml5ab"]
atlas = ExtResource("6_ijs0q")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3uli"]
atlas = ExtResource("6_ijs0q")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_71hvi"]
atlas = ExtResource("6_ijs0q")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s3uvs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3fln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1vhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr70s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbk57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8so8s")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dlbwf")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_wy3vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ilc")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jshf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t755y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58yrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ami")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn1xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sd6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7axia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4b3t")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6xq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml5ab")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_j3uli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71hvi")
}],
"loop": false,
"name": &"shoot",
"speed": 14.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hxbqy"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6v4yn"]
radius = 386.032

[sub_resource type="CircleShape2D" id="CircleShape2D_hj2fp"]
radius = 16.0312

[sub_resource type="Curve" id="Curve_e1pwb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.48, 0.78022), 0.0, 0.0, 0, 0, Vector2(1, 0.0659341), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_2i85s"]
curve = SubResource("Curve_e1pwb")

[sub_resource type="Gradient" id="Gradient_0fg0u"]
offsets = PackedFloat32Array(0.401639, 1)
colors = PackedColorArray(0.50644, 0.00143526, 0.692051, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kiuoo"]
gradient = SubResource("Gradient_0fg0u")

[sub_resource type="Curve" id="Curve_ilj5p"]
max_value = 5.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 5), 0.0, 0.0, 0, 0, Vector2(0.153333, 2.25275), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_hbp5k"]
curve = SubResource("Curve_ilj5p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fmc87"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
initial_velocity_min = 123.6
initial_velocity_max = 348.31
angular_velocity_min = 2000.0
angular_velocity_max = 2000.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 51.69
radial_accel_max = 51.69
scale_min = 2.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_hbp5k")
color = Color(0.611765, 0, 0.815686, 1)
color_ramp = SubResource("GradientTexture1D_kiuoo")
alpha_curve = SubResource("CurveTexture_2i85s")

[node name="ShootingAberration" type="CharacterBody2D"]
collision_layer = 33
script = ExtResource("1_ynahl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_cjyqf")
sprite_frames = SubResource("SpriteFrames_s3uvs")
animation = &"shoot"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="CharacterBody2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_hxbqy")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6v4yn")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_hj2fp")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(3, 1)
emitting = false
amount = 14
amount_ratio = 0.7399
process_material = SubResource("ParticleProcessMaterial_fmc87")
lifetime = 0.3
one_shot = true
explosiveness = 1.0

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 2.286

[node name="GotHitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_bho48")
volume_db = -15.017
pitch_scale = 1.35
bus = &"SFX"

[node name="DeadSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_snvkn")
volume_db = -10.0
pitch_scale = 1.33
bus = &"SFX"

[node name="GoingToShoot1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_d5kft")
pitch_scale = 1.24
bus = &"SFX"

[node name="Throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_y6of6")
volume_db = 7.009
pitch_scale = 0.57
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
